--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -20,5 +20,7 @@ jobs:
         with:
           node-version: 18
           cache: npm
+      - name: npm install
+        run: npm install
       - name: Test build website
         run: npm run build
