Suppress logging VPS terminal output

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,4 @@ jobs:
         run: |
           sudo apt-get update && sudo apt-get install -y sshpass
           sshpass -p "$VPS_PASSWORD" scp -o StrictHostKeyChecking=no build.tar.gz $VPS_USER@$VPS_HOST:$VPS_STAGING_PATH
-          sshpass -p "$VPS_PASSWORD" ssh -o StrictHostKeyChecking=no $VPS_USER@$VPS_HOST << EOF
-          echo "$VPS_PASSWORD" | sudo -S /$VPS_STAGING_PATH/deploy.sh
-          EOF
+          sshpass -p "$VPS_PASSWORD" ssh -o StrictHostKeyChecking=no -o LogLevel=QUIET -o UserKnownHostsFile=/dev/null -t $VPS_USER@$VPS_HOST "echo '$VPS_PASSWORD' | sudo -S /$VPS_STAGING_PATH/deploy.sh"
